--- a/Activity_04/Gemfile
+++ b/Activity_04/Gemfile
@@ -42,5 +42,8 @@ end
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
 gem 'tzinfo-data', platforms: %i[mingw mswin x64_mingw jruby]
 
+gem 'devise'
+gem 'devise-jwt'
 gem 'paranoia', '2.4.3'
+gem 'rack-cors'
 gem 'rubocop', '~> 1.23', require: false
