--- a/Activity_04/test/fixtures/people.yml
+++ b/Activity_04/test/fixtures/people.yml
@@ -1,7 +1,7 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  name: 
+#one:
+#  fname:
 
-two:
-  name: 
+#two:
+#  fname:
