--- a/Activity_04/test/fixtures/tags.yml
+++ b/Activity_04/test/fixtures/tags.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  name: MyString
-  tag_type: one
+#one:
+#  name: MyString
+#  tag_type: one
 
-two:
-  name: MyString
-  tag_type: two
+#two:
+#  name: MyString
+#  tag_type: two
